# nexus

./: .gitignore  Cargo.toml  README.md
.beads/: issues.jsonl
.claude/: CLAUDE.md  settings.json  wave-plan.json
.github/workflows/: build.yml
config/: agents.example.toml  notifications.example.toml
crates/nexus-agent/: Cargo.toml
crates/nexus-agent/src/: config.rs  dispatch.rs  event_forwarder.rs  events.rs  grpc.rs  health.rs  lib.rs  main.rs  notification_engine.rs  parser.rs  registry.rs  routes.rs  shutdown.rs  socket.rs  tmp.W0kfqUFrO7.rs  watcher.rs
crates/nexus-agent/src/claude_utils/: log.rs  mod.rs  notification_config.rs  notification_mode.rs  notify.rs  path.rs  project.rs  tmp.Da5qLfAp7s.rs
crates/nexus-agent/src/services/: credential_watcher.rs  git_watch.rs  imessage_reader.rs  launchd_health.rs  macos_integration.rs  mod.rs  server_monitor.rs  sync_telemetry.rs  systemd_health.rs  tmp.3U2sOIlpOm.rs
crates/nexus-agent/src/services/receiver/: apns.rs  audio.rs  banner.rs  buffer.rs  dedup.rs  mod.rs  notification_batch.rs  playback_queue.rs  service.rs  suppression.rs  tts.rs  tts_elevenlabs.rs  tts_system.rs  watch_tokens.rs
crates/nexus-agent/tests/: grpc_integration.rs
crates/nexus-agent/tests/common/: mod.rs
crates/nexus-core/: Cargo.toml  build.rs
crates/nexus-core/src/: agent.rs  api.rs  config.rs  health.rs  lib.rs  lifecycle.rs  notes.rs  notification_config.rs  session.rs  socket_event.rs  tmp.B8IH08BX0o.rs  tmp.BzRrH1sRxx.rs  tmp.OpCxubyBQk.rs  tmp.i70Zr3AoaB.rs
crates/nexus-register/: Cargo.toml
crates/nexus-register/src/: main.rs
crates/nexus-status/: Cargo.toml
crates/nexus-status/src/: main.rs
crates/nexus-tui/: Cargo.toml
crates/nexus-tui/src/: app.rs  attach.rs  client.rs  main.rs  markdown.rs  notifications.rs  screens.rs  stream.rs
crates/nexus-tui/src/screens/: dashboard.rs  detail.rs  health.rs  notifications.rs  palette.rs  projects.rs  stream.rs
deploy/: com.nexus.agent.plist  install.sh  nexus-agent.service
deploy/hooks/: post-merge  post-merge-dispatcher  pre-push
deploy/hooks.d/post-merge/: 02-deploy
docs/: architecture.html
docs/plan/: ambiguity-audit.md
docs/plan/.locks/: roadmap.md.locked
docs/plan/archive/2026-03-23-mvp/: COMPLETION.md  attach-models.html  prd.md  scope-lock.md
docs/plan/archive/2026-03-24-production-hardening/: COMPLETION.md  context.md  scope-lock.md
docs/plan/brand/: brand-identity.md  tokens.css
docs/plan/polish-and-ux/: context.md  prd.md  roadmap.md  scope-lock.md
docs/plan/production-hardening/: ambiguity-audit.md  prd.md
docs/plan/production-hardening/.locks/: roadmap.md.locked
docs/wireframes/: tui-prototype.html
openspec/: project.md
openspec/archive/wave-plans/: wave-plan-20260321T160038.json
openspec/changes/add-auto-reconnect/: proposal.md  tasks.md
openspec/changes/add-config-hot-reload/: proposal.md
openspec/changes/add-graceful-shutdown/: tasks.md
openspec/changes/add-grpc-tests/: tasks.md
openspec/changes/add-session-detail/: proposal.md
openspec/changes/add-start-session-tui/: proposal.md
openspec/changes/add-stream-actions/: proposal.md  tasks.md
openspec/changes/agent-health-and-ops/: design.md  proposal.md
openspec/changes/archive/2026-03-20-hook-session-registration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-project-list-wizard/: proposal.md
openspec/changes/archive/2026-03-21-session-broker/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-status-bar-telemetry/: proposal.md
openspec/changes/archive/2026-03-23-add-agent-targeting/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-command-progress-relay/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-discovery-api/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-event-stream-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-health-api-spec/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-stream-actions/: tasks.md
openspec/changes/archive/2026-03-23-improve-stream-framing/: tasks.md
openspec/changes/archive/2026-03-23-improve-stream-markdown/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-command-palette/: proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-config-hot-reload/: tasks.md
openspec/changes/archive/2026-03-24-add-graceful-shutdown/: proposal.md
openspec/changes/archive/2026-03-24-add-grpc-tests/: proposal.md
openspec/changes/archive/2026-03-24-add-session-detail/: tasks.md
openspec/changes/archive/2026-03-24-add-start-session-tui/: tasks.md
openspec/changes/archive/2026-03-24-add-tui-snapshots/: proposal.md  tasks.md
openspec/changes/archive/deploy-and-ci/: proposal.md
openspec/changes/collapsible-tool-output/: proposal.md  tasks.md
openspec/changes/dashboard-table-liststate/: proposal.md
openspec/changes/deploy-and-ci/: tasks.md
openspec/changes/deploy-monitoring/: tasks.md
openspec/changes/detail-block-widget/: proposal.md  tasks.md
openspec/changes/detail-palette-start/: proposal.md  tasks.md
openspec/changes/fix-port-binding/: tasks.md
openspec/changes/global-layout-polish/: proposal.md
openspec/changes/improve-stream-framing/: proposal.md  tasks.md
openspec/changes/input-bar-enhancements/: proposal.md  tasks.md
openspec/changes/project-badges-scratchpad/: proposal.md  tasks.md
openspec/changes/project-list-wizard/: tasks.md
openspec/changes/ratatui-030-upgrade/: tasks.md
openspec/changes/status-bar-telemetry/: tasks.md
openspec/changes/stream-events-rpc/: design.md
openspec/changes/stream-message-formatting/: proposal.md  tasks.md
openspec/changes/stream-scrollbar-separation/: proposal.md
openspec/changes/syntect-code-highlighting/: proposal.md
openspec/changes/tui-attach-and-alerts/: proposal.md  tasks.md
openspec/changes/tui-grpc-client/: design.md  proposal.md  tasks.md
openspec/changes/tui-screens-and-aggregation/: tasks.md
openspec/changes/tui-textarea-input/: tasks.md
proto/: nexus.proto
(+57 files in other folders)
