[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/leonardoacosta/nexus"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# WebSocket
tokio-tungstenite = "0.26"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.33"

# gRPC / Protobuf
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost-build = "0.14"

# Streaming
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Hostname
hostname = "0.4"

# Markdown parsing
pulldown-cmark = "0.13"

# File watching
notify = "6"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

# TUI text area widget (ratatui 0.30-compatible fork)
# Package is "tui-textarea-2", lib name is "tui_textarea"
tui-textarea-2 = { version = "0.10", features = ["crossterm"] }

# Shared crate
nexus-core = { path = "crates/nexus-core" }
