[package]
name = "nexus-agent"
description = "Per-machine daemon that tracks local Claude Code sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[dependencies]
nexus-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
hostname = { workspace = true }
