[package]
name = "nexus-agent"
description = "Per-machine daemon that tracks local Claude Code sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nexus_agent"
path = "src/lib.rs"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[features]
# notification: TTS/APNs/banner pipeline (ReceiverService + audio deps).
# Enabled by default — role=agent skips starting ReceiverService at runtime.
# Full optional gating (cfg guards in source) is a future step; for now the
# feature flag exists and all notification deps compile unconditionally.
default = ["notification"]
notification = []

[dependencies]
nexus-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
hostname = { workspace = true }
notify = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Notification pipeline dependencies (absorbed from claude-daemon).
async-trait = "0.1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
a2 = "0.10"
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tempfile = "3"
