[package]
name = "nexus-status"
description = "Claude Code statusline renderer — queries nexus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus-status"
path = "src/main.rs"

[dependencies]
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
