[package]
name = "nexus-tui"
description = "Terminal UI client — aggregates sessions from all nexus agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
toml = { workspace = true }
tokio-stream = { workspace = true }
pulldown-cmark = { workspace = true }
notify = { workspace = true }
base64 = "0.22"
